// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/drawer/demo/basic-right.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/form-in-drawer.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <i
      aria-label="icon: plus"
      class="anticon anticon-plus"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#plus"
        />
      </svg>
    </i>
    <span>
       New account
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/multi-level-drawer.md correctly 1`] = `
<div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open drawer
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/placement.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-right:8px"
  >
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="top"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        top
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="right"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        right
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="bottom"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        bottom
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="left"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        left
      </span>
    </label>
  </div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>
</div>
`;

exports[`renders ./components/drawer/demo/user-profile.md correctly 1`] = `
<div>
  <div
    class="ant-list ant-list-split ant-list-bordered"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design/index-cn"
                >
                  Lily
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Progresser AFX
              </div>
            </div>
          </div>
          <ul
            class="ant-list-item-action"
          >
            <li>
              <a>
                View Profile
              </a>
            </li>
          </ul>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-avatar"
            >
              <span
                class="ant-avatar ant-avatar-circle ant-avatar-image"
              >
                <img
                  src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                />
              </span>
            </div>
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://ant.design/index-cn"
                >
                  Lily
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Progresser AFX
              </div>
            </div>
          </div>
          <ul
            class="ant-list-item-action"
          >
            <li>
              <a>
                View Profile
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
